--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -76,3 +76,30 @@
     @apply text-slate-600;
   }
 }
+
+@layer utilities {
+  @keyframes infinite-scroll {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(calc(-100% / 3));
+    }
+  }
+
+  .animate-infinite-scroll {
+    animation: infinite-scroll 25s linear infinite;
+  }
+  
+  .animate-infinite-scroll:hover {
+    animation-play-state: paused;
+  }
+
+  .animate-infinite-scroll-portfolio {
+    animation: infinite-scroll 40s linear infinite;
+  }
+  
+  .animate-infinite-scroll-portfolio:hover {
+    animation-play-state: paused;
+  }
+}
